syntax = "proto3";

package scow.server;

message QuerySystemInitializedRequest {}
message QuerySystemInitializedReply { bool initialized = 1; }

message CreateInitAdminRequest {
  string user_id = 1;
  string name = 2;
  string email = 3;
}
message CreateInitAdminReply {}

message CompleteInitRequest {}

message CompleteInitReply {}

service InitService {
  rpc QuerySystemInitialized(QuerySystemInitializedRequest)
      returns (QuerySystemInitializedReply);

  rpc CreateInitAdmin(CreateInitAdminRequest)
      returns (CreateInitAdminReply);

  // ALREADY_EXISTS: already initialized
  rpc CompleteInit(CompleteInitRequest) returns (CompleteInitReply);
}
